# Mint-Ec-Zertifikat

./: createSchuelerPopup.js  edit-popup.js  export.html  fachliche-kompetenz.html  fachlicheKompetenz.js  fachwissenschaftliches-arbeiten.html  index.html  main.js  material-icons.css  package-lock.json  package.json  popup.js  rust-toolchain  schueler-popup.html  schuelerbearbeiten.html  schuelerbearbeiten.js  schuelerbearbeiten.txt  settings.html  slideshow.js  style_sb.css  style_zs.css  styles.css  zusaetzlich.html
.github/: dependabot.yml
.github/workflows/: publish-major-release.yml  publish-minor-release.yml  publish-patch.yml  publish-release.yml  publish.yml
MintEc/css/: style.css  style_afb1.css  style_afb2.css  style_afb3.css  style_sb.css
MintEc/html/: afb1.html  afb2.html  afb3.html  index.html  schueler_bearbeiten.html
mint-ec-front-end/: af1.html  af2.html  af2_jufo.html  af2_sonstiges.html  af2_wppf.html  af3.html  bereich2.html  mintaktivitäaten.html  normal.html  readme.txt  schueler_bearbeiten.html  settings.html
src/: README.md  af1.html  af2.html  af2_jufo.html  af2_sonstiges.html  af2_wppf.html  af3.html  afb1.html  afb2.html  afb3.html  competition-popup.css  competition-popup.html  competition-popup.js  createSchuelerPopup.js  edit-competition-popup.css  edit-competition-popup.html  edit-competition-popup.js  edit-popup.js  edit-schueler-popup.html  export.html  export.js  fachliche-kompetenz-db.js  fachliche-kompetenz.html  fachliche-kompetenz.js  fachlicheKompetenz.js  fachwissenschaftliches-arbeiten.html  fachwissenschaftliches-arbeiten.js  index.html  index_script.js  main.js  material-icons.css  normal.html  package-lock.json  package.json  popup.js  schueler-popup.html  schueler_bearbeiten.html  schuelerbearbeiten.css  schuelerbearbeiten.html  schuelerbearbeiten.js  (+17 more)
src-tauri/: .gitignore  .taurignore  Cargo.toml  package-lock.json  package.json  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: db.sqlite  db.sqlite-shm  db.sqlite-wal  remove, when putting smth in this folder.txt
src-tauri/src/: db.rs  dialog.rs  lib.rs  main.rs  pdf.rs  state.rs
src/components/: topbar.js
src/legacy_gui/: bereich2.html  popup.js  readme.txt
src/legacy_guis/: afb1.html  afb2.html  fachlicheKompetenz.js  schueler_bearbeiten.html  style.css  style_afb2.css  style_afb3.css  style_sb.css  style_settings.css
src/legacy_guis/showcase_gui/: af2_jufo.html  af2_sonstiges.html  af3.html  fachlicheKompetenz.js  index.html  mintaktivitäaten.html  settings.html  zusaetzlich.html
src/legacy_guis/test_gui/: createSchuelerPopup.js  export.html  fachliche-kompetenz.html  fachwissenschaftliches-arbeiten.html  index.html  main.js  settings.html
src/test_gui/: createSchuelerPopup.js  index.html  zusätzlich.html
