[package]
name = "Mint-EC"
version = "0.0.1"
description = "Mint-EC-Zertifikat-Generator"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mint_ec_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = ["devtools"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.41.1", features = ["full"] }
pdf_forms = "0.3.4"
rfd = "0.15.1"
chrono = "0.4.38"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-prevent-default = { version = "1.0", features = ["unstable-native-windows"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
