#cargo-features = ["profile-rustflags"]

[package]
name = "Mint-EC"
version = "0.0.1"
description = "Mint-EC-Zertifikat-Generator"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mint_ec_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["devtools"] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.45.0", features = ["full"] }
pdf_forms = "0.3.4"
chrono = "0.4.41"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-prevent-default = { version = "2.1", features = ["unstable-windows"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-process = "2.2.1"
rfd = { version = "0.15.3", default-features = false, features = ["gtk3"] }

[profile.dev]
incremental = false
#rustflags = ["-Zthreads=12"]

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = 3
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.7.1"
#rustflags = ["-Zthreads=12"]
